// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoriesContainer should match snapshot 1`] = `
<div
  className="bow"
>
  <img
    alt=""
    className="pinkbow"
    src="Bow.png"
  />
  <h1>
    Hello Star Wars
  </h1>
  <header
    className="helloHeader"
  >
    <h3>
      <img
        alt=""
        className="fav-heart"
        src="Heart.png"
      />
       Faves: 
    </h3>
    <p />
  </header>
  <article
    className="categoriesContainer"
  >
    <CategoryCard
      key="Luke Skywalker0"
      name="Luke Skywalker"
    />
    <CategoryCard
      key="Darth Vader1"
      name="Darth Vader"
    />
  </article>
</div>
`;

exports[`CategoriesContainer should match snapshot 2`] = `
<div
  className="bow"
>
  <img
    alt=""
    className="pinkbow"
    src="Bow.png"
  />
  <h1>
    Hello Star Wars
  </h1>
  <header
    className="helloHeader"
  >
    <h3>
      <img
        alt=""
        className="fav-heart"
        src="Heart.png"
      />
       Faves: 
    </h3>
    <p />
  </header>
  <article
    className="categoriesContainer"
  >
    <CategoryCard
      key="Sand Crawler0"
      name="Sand Crawler"
    />
    <CategoryCard
      key="Snowspeeder1"
      name="Snowspeeder"
    />
  </article>
</div>
`;

exports[`CategoriesContainer should match snapshot 3`] = `
<div
  className="bow"
>
  <img
    alt=""
    className="pinkbow"
    src="Bow.png"
  />
  <h1>
    Hello Star Wars
  </h1>
  <header
    className="helloHeader"
  >
    <h3>
      <img
        alt=""
        className="fav-heart"
        src="Heart.png"
      />
       Faves: 
    </h3>
    <p />
  </header>
  <article
    className="categoriesContainer"
  >
    <CategoryCard
      key="Hoth0"
      name="Hoth"
    />
    <CategoryCard
      key="Endor1"
      name="Endor"
    />
  </article>
</div>
`;

exports[`CategoriesContainer should match snapshot 4`] = `
<div
  className="bow"
>
  <img
    alt=""
    className="pinkbow"
    src="Bow.png"
  />
  <h1>
    Hello Star Wars
  </h1>
  <header
    className="helloHeader"
  >
    <h3>
      <img
        alt=""
        className="fav-heart"
        src="Heart.png"
      />
       Faves: 
    </h3>
    <p />
  </header>
  <article
    className="categoriesContainer"
  >
    <CategoryCard
      key="Hoth0"
      name="Hoth"
    />
    <CategoryCard
      key="Luke Skywalker1"
      name="Luke Skywalker"
    />
  </article>
</div>
`;
